--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
     <artifactId>calculator-microservices</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>addition</module>
+    </modules>
     <name>calculator-microservices</name>
 
     <properties>
