--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <maven.compiler.source>18</maven.compiler.source>
         <maven.compiler.target>18</maven.compiler.target>
         <spring.boot.version>2.7.2</spring.boot.version>
+        <spring.openapi.version>1.6.9</spring.openapi.version>
     </properties>
 
     <dependencyManagement>
