--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <maven.compiler.target>18</maven.compiler.target>
         <spring.boot.version>2.7.2</spring.boot.version>
         <spring.openapi.version>1.6.9</spring.openapi.version>
+        <surefire.plugin.version>2.22.0</surefire.plugin.version>
     </properties>
 
     <dependencyManagement>
