--- a/addition/pom.xml
+++ b/addition/pom.xml
@@ -19,9 +19,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.corp.calculator</groupId>
-            <artifactId>tracer</artifactId>
-            <version>1.0.0</version>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>common</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springdoc</groupId>
@@ -41,28 +41,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>${surefire.plugin.version}</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-install-plugin</artifactId>
-                <version>2.5.2</version>
-                <configuration>
-                    <groupId>io.corp.calculator</groupId>
-                    <artifactId>tracer</artifactId>
-                    <version>1.0.0</version>
-                    <packaging>jar</packaging>
-                    <file>src/main/resources/dependencies/tracer-1.0.0.jar</file>
-                    <generatePom>true</generatePom>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>install-jar-lib</id>
-                        <goals>
-                            <goal>install-file</goal>
-                        </goals>
-                        <phase>validate</phase>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
