feat: Configura Swagger y añade las anotaciones necesarias en subtraction

--- a/subtraction/pom.xml
+++ b/subtraction/pom.xml
@@ -23,5 +23,10 @@
             <artifactId>common</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>${spring.openapi.version}</version>
+        </dependency>
     </dependencies>
 </project>
